--- a/dictionary-app/package.json
+++ b/dictionary-app/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
     "ai": "^4.3.16",
+    "cedict-json": "^1.3.20250531",
     "express": "^5.1.0",
+    "hanzi": "^2.1.5",
     "hanzi-writer": "^3.7.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
