--- a/starter/package.json
+++ b/starter/package.json
@@ -21,6 +21,8 @@
 	"dependencies": {
 		"@tanstack/react-query": "5.80.6",
 		"@tanstack/react-query-devtools": "5.80.6",
+		"hanzi": "^2.1.5",
+		"hanzi-writer": "^3.7.2",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-error-boundary": "6.0.0",
