--- a/starter/apps/server/package.json
+++ b/starter/apps/server/package.json
@@ -12,17 +12,17 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings"
 	},
 	"dependencies": {
-		"dotenv": "^17.2.1",
-		"zod": "^4.0.2",
-		"@trpc/server": "^11.5.0",
-		"@trpc/client": "^11.5.0",
 		"@hono/trpc-server": "^0.4.0",
-		"hono": "^4.8.2"
+		"@trpc/client": "^11.7.1",
+		"@trpc/server": "^11.7.1",
+		"dotenv": "^17.2.3",
+		"hono": "^4.10.4",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"tsdown": "^0.14.1",
-		"typescript": "^5.8.2",
-		"wrangler": "^4.23.0",
-		"@types/node": "^22.13.11"
+		"@types/node": "^22.19.0",
+		"tsdown": "^0.14.2",
+		"typescript": "^5.9.3",
+		"wrangler": "^4.46.0"
 	}
 }
