--- a/starter/apps/web/package.json
+++ b/starter/apps/web/package.json
@@ -15,34 +15,34 @@
 		"cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
 	},
 	"dependencies": {
-		"radix-ui": "^1.4.2",
-		"@tanstack/react-form": "^1.12.3",
+		"@opennextjs/cloudflare": "^1.12.0",
+		"@tanstack/react-form": "^1.23.8",
+		"@tanstack/react-query": "^5.90.7",
+		"@trpc/client": "^11.7.1",
+		"@trpc/server": "^11.7.1",
+		"@trpc/tanstack-react-query": "^11.7.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.487.0",
 		"next": "15.5.0",
 		"next-themes": "^0.4.6",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"sonner": "^2.0.5",
-		"tailwind-merge": "^3.3.1",
-		"tw-animate-css": "^1.3.4",
-		"zod": "^4.0.2",
-		"@trpc/tanstack-react-query": "^11.5.0",
-		"@trpc/client": "^11.5.0",
-		"@trpc/server": "^11.5.0",
-		"@tanstack/react-query": "^5.85.5",
-		"@opennextjs/cloudflare": "^1.3.0"
+		"radix-ui": "^1.4.3",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"sonner": "^2.0.7",
+		"tailwind-merge": "^3.4.0",
+		"tw-animate-css": "^1.4.0",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@tailwindcss/postcss": "^4.1.10",
-		"@types/node": "^20",
-		"@types/react": "^19",
-		"@types/react-dom": "^19",
-		"tailwindcss": "^4.1.10",
-		"typescript": "^5",
-		"@tanstack/react-query-devtools": "^5.85.5",
-		"@tauri-apps/cli": "^2.4.0",
-		"wrangler": "^4.23.0"
+		"@tailwindcss/postcss": "^4.1.17",
+		"@tanstack/react-query-devtools": "^5.90.2",
+		"@tauri-apps/cli": "^2.9.4",
+		"@types/node": "^20.19.24",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
+		"tailwindcss": "^4.1.17",
+		"typescript": "^5.9.3",
+		"wrangler": "^4.46.0"
 	}
 }
