--- a/my-better-t-app/pnpm-workspace.yaml
+++ b/my-better-t-app/pnpm-workspace.yaml
@@ -1,3 +1,6 @@
 packages:
-  - "apps/*"
-  - "packages/*"
+  - apps/*
+  - packages/*
+catalog:
+  "@trpc/server": ^11.5.0
+  "@trpc/client": ^11.5.0
