--- a/my-better-t-app/.gitignore
+++ b/my-better-t-app/.gitignore
@@ -48,3 +48,18 @@ coverage
 .cache
 tmp
 temp
+
+# START Ruler Generated Files
+/.codex/config.json
+/.codex/config.json.bak
+/.codex/config.toml
+/.codex/config.toml.bak
+/.gemini/settings.json
+/.gemini/settings.json.bak
+/.vscode/mcp.json
+/.vscode/mcp.json.bak
+/AGENTS.md
+/AGENTS.md.bak
+/opencode.json
+/opencode.json.bak
+# END Ruler Generated Files
