--- a/my-better-t-app/apps/web/package.json
+++ b/my-better-t-app/apps/web/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "dev": "next dev --port=3001",
     "build": "next build",
-    "start": "next start",
-    "tauri": "tauri",
-    "desktop:dev": "tauri dev",
-    "desktop:build": "tauri build"
+    "start": "next start"
   },
   "dependencies": {
     "radix-ui": "^1.4.2",
@@ -25,7 +22,11 @@
     "tw-animate-css": "^1.3.4",
     "zod": "^4.1.12",
     "babel-plugin-react-compiler": "^1.0.0",
-    "@tanstack/react-query": "^5.85.5"
+    "@trpc/server": "catalog:",
+    "@trpc/client": "catalog:",
+    "@trpc/tanstack-react-query": "^11.5.0",
+    "@tanstack/react-query": "^5.85.5",
+    "@my-better-t-app/api": "workspace:*"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
@@ -35,6 +36,6 @@
     "tailwindcss": "^4.1.10",
     "typescript": "^5",
     "@tanstack/react-query-devtools": "^5.85.5",
-    "@tauri-apps/cli": "^2.4.0"
+    "@my-better-t-app/config": "workspace:*"
   }
 }
